[gd_scene load_steps=2 format=3 uid="uid://bysejqqiloy1u"]

[ext_resource type="Script" path="res://UI/CombatUI.gd" id="1_uhqdp"]

[node name="CombatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_uhqdp")

[node name="CardContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.666667
anchor_right = 0.819917
anchor_bottom = 0.997173
offset_right = -0.544067
offset_bottom = -0.16803
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.864583
anchor_top = 0.842593
anchor_right = 0.931424
anchor_bottom = 0.933642
offset_right = 8.0
offset_bottom = 8.0
text = "NEXT"
metadata/_edit_use_anchors_ = true

[node name="Cast" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.864583
anchor_top = 0.716049
anchor_right = 0.931424
anchor_bottom = 0.807099
offset_right = 8.0
offset_bottom = 8.0
text = "CAST"
metadata/_edit_use_anchors_ = true

[node name="SelectedCardContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.758681
anchor_top = 0.0617284
anchor_right = 0.994708
anchor_bottom = 0.432074
offset_right = 0.0960007
offset_bottom = 0.0159988
metadata/_edit_use_anchors_ = true

[node name="EnergyPayment" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.763021
anchor_top = 0.444444
anchor_right = 0.996528
anchor_bottom = 0.520062
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Status" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.686632
anchor_right = 1.0
anchor_bottom = 0.24537
grow_horizontal = 2
grow_vertical = 2
text = "<DebugStatus>"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="CurrentEnergy" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.329861
anchor_top = 0.0277778
anchor_right = 0.614583
anchor_bottom = 0.0833333
grow_horizontal = 2
grow_vertical = 2
text = "Current Energy:"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Cast" to="." method="_on_cast_pressed"]
